# ACME

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ACME_Finance_Data_Journey.pptx  ACME_Finance_Data_Journey.py  ARCHITECTURE.md  PLAN.md  cost-guardrails.md  data-dictionary.md  use-case-testing.md
docs/adr/: 0001-tooling.md  0002-aws-region-and-vpc.md  0003-data-grounding-from-salesforce.md  0004-rds-erp-network.md
docs/course/: AI-Finance-Transformation-Course.pptx  Finance-Glossary-Quick-Reference.pptx  build-enterprise-course.js  build-glossary.js  build-section-1.js  build-section-2.js  build-section-3.js  build-section-4.js  build-section-5.js  build-section-6.js  build-section-7.js  build-section-8.js  package-lock.json  section-1-narration.md  section-1-slides.pptx  section-2-narration.md  section-2-slides.pptx  section-3-narration.md  section-3-slides.pptx  section-4-narration.md  section-4-slides.pptx  section-5-narration.md  section-5-slides.pptx  (+7 more)
generators/: README.md  __init__.py  anomalies.py  ap.py  ar.py  config.py  crm.py  entities.py  epm.py  fixed_assets.py  gl.py  output.py  payroll.py  run_all.py  s3_upload.py  types.py  validate.py  verify.py
scripts/: bootstrap-tf-backend.sh  convert_erp_to_parquet.py  deploy.sh  load_erp.py  provision_agentcore.py  refresh-my-ip.sh  sample_queries.sql  setup_redshift_external_schemas.py  start-rds.sh  stop-rds.sh
tests/: test_anomaly_detect.py  test_crm.py  test_entities.py  test_forecast_api.py  test_forecast_driver.py  test_phase2c.py  test_phase2d2e.py  test_whatif_sim.py
ui/: Dockerfile  app.py
ui-react/: index.html  package-lock.json  package.json
(+108 files in other folders)
