[project]
name = "acme-finance"
version = "0.1.0"
description = "ACME SaaS Solutions — finance transformation learning project on AWS"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # Data generation
    "faker>=30.0.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "python-dateutil>=2.9.0",
    # AWS
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    # Postgres (for ERP simulator)
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
    # SQL safety (used by text_to_sql Lambda)
    "sqlglot>=25.0.0",
    # CLI / utilities
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipykernel>=6.0.0",
]
forecast = [
    "statsforecast>=1.7.0",
    "prophet>=1.1.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
]
dbt = [
    "dbt-redshift>=1.8.0",
]
ui = [
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
]

[project.scripts]
acme-generate = "generators.run_all:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generators", "agent", "pipelines"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
